--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -1,12 +1,15 @@
 .loginWrapper{
     display: flex;
     justify-content: center;
+    height: 60vh;
 }
 
 .loginCard{
     width: 27vw;
     margin-top: 10%;
 }
+
+
 
 .insta-logo{
     width: 100%;
@@ -33,4 +36,11 @@
     position: absolute; 
     left: 143px;
     top: 93px;
+}
+
+@media only screen and (max-width: 480px) {
+    .loginCard {
+        width: 80vw;
+        margin-top: 10%;
+    }
 }
