--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -1,6 +1,7 @@
 .signupWrapper{
     display: flex;
     justify-content: center;
+    height: 90vh;
 }
 
 .signupCard{
@@ -26,5 +27,12 @@
     }
     .insta-logo img{
         width: 35%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+.signupCard {
+        width: 80vw;
+        margin-top: 5%;
     }
 }
